--- a/package.json
+++ b/package.json
@@ -19,12 +19,8 @@
     "prettier-watch:darwin:linux": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "prettier-watch:default": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "test": "jest --config tools/jest.config.js --coverage",
-    "test:dev": "jest --watchAll --config tools/jest.config.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint && npm run test"
-    }
+    "test:dev": "jest --watchAll --config tools/jest.config.js",
+    "prepare": "husky install .husky"
   },
   "keywords": [],
   "engines": {
@@ -40,8 +36,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
+    "@types/hapi__vision": "5.5.7",
     "@types/jest": "^29.5.11",
     "@types/node": "20.10.5",
+    "@types/nunjucks": "3.2.6",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "eslint": "8.56.0",
@@ -50,6 +48,7 @@
     "eslint-plugin-prettier": "5.1.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "nodemon": "3.0.2",
     "onchange": "7.1.0",
     "prettier": "3.1.1",
