--- a/tools/.eslintrc
+++ b/tools/.eslintrc
@@ -34,6 +34,11 @@
     "prettier/prettier": [
       "error",
       {
+        "semi": true,
+        "trailingComma": "all",
+        "singleQuote": true,
+        "printWidth": 120,
+        "tabWidth": 2,
         "endOfLine": "auto"
       }
     ]
