--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "hapi__vision", "nunjucks"],
     "moduleDetection": "force"
   },
   "include": ["src/**/*.ts"],
