260718 - Integrated the logging framework, updated readme.md, ignoring liniting to log files and update package.json metadata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["node", "jest", "hapi__vision", "nunjucks"],
+    "types": ["node", "jest", "hapi__vision", "nunjucks", "hapi-pino"],
     "moduleDetection": "force"
   },
   "include": ["src/**/*.ts"],
