--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ncea-setup",
+  "name": "natural-capital-and-ecosystem-assessment",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
     "@types/hapi__vision": "5.5.7",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
     "@types/nunjucks": "3.2.6",
     "@typescript-eslint/eslint-plugin": "6.15.0",
@@ -48,7 +48,7 @@
     "eslint-plugin-prettier": "5.1.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "jest-mock-extended": "^3.0.5",
+    "jest-mock-extended": "3.0.5",
     "nodemon": "3.0.2",
     "onchange": "7.1.0",
     "prettier": "3.1.1",
@@ -63,6 +63,7 @@
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
     "govuk-frontend": "5.0.0",
+    "hapi-pino": "12.1.0",
     "nunjucks": "3.2.4"
   }
 }
