--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
+    "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
     "nunjucks": "3.2.4"
