--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "5.1.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-mock-extended": "3.0.5",
     "nodemon": "3.0.2",
     "onchange": "7.1.0",
