--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "module": "commonjs",
     "rootDir": "src",
     "resolveJsonModule": true,
@@ -12,7 +12,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["node", "jest", "hapi__vision", "nunjucks", "hapi-pino"],
+    "types": ["node", "jest", "hapi__vision", "nunjucks", "hapi-pino", "jsdom"],
     "moduleDetection": "force"
   },
   "include": ["src/**/*.ts"],
