276567 - Pipeline minor fix (#8)
* pipeline fix

* pipeline fix

* pipeline fix

* pipeline fix

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,10 +17,10 @@ variables:
   isPullRequest: $[eq(variables['Build.Reason'], 'PullRequest')]
   branchSource: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
   branch: $[replace(variables['branchSource'], '/', '-')]
-  ${{ if eq(variables.isMaster, true) }}:
-    artifactNameSuffix: ''
-  ${{ else }}:
+  ${{ if ne(variables.isMaster, 'true') }}:
     artifactNameSuffix: _$(branch)
+  ${{ else }}:
+    artifactNameSuffix: ''
 
 pool:
   vmImage: 'ubuntu-latest'
