--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
+    "@types/hapi__joi": "^17.1.14",
     "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
+    "joi": "^17.12.0",
     "nunjucks": "3.2.4",
     "shelljs": "0.8.5"
   },
