260719 - Configuration for environment variables and secrets (#9)
* 260719 - Installed dotenv and confiugred environment variables.

* 260719 - Improved the environment config & implemented the test cases

* 260719 - Improved environment varaibles configuratio, implemented unit test cases for both environment variables and geoNetworkClient

* 260719 - Implemented a logic to retrieve the secret keys from the given azure key vault

* 260719 - Implemented test case for azure key vault client and reading the secrets with mocking

* 260719 - Changing the tags to header and article and adding ARIA roles. Also fixing the full width banner size in large screens

* 260719 - Fixing the test case issues

* 260719 - Fixing the test cases

* 260719 - Updated the readme.md file with environment variables information

* 260719 - Addressed the PR review comments

* 260719 - Removed models folder and moved the interfaces and schema folders to src folder

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf ./build && tsc && npm run copy-files",
     "copy-files": "ts-node copyNonTSFiles.ts",
-    "start:dev": "npx nodemon --config tools/nodemon.json",
+    "start:dev": "cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json",
     "start": "npm run build && node build/index.js",
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint --config tools/.eslintrc src/**/* --ext .js,.ts",
@@ -38,6 +38,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/hapi__hapi": "21.0.0",
+    "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
@@ -45,6 +46,9 @@
     "@types/shelljs": "0.8.15",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
+    "axios-mock-adapter": "^1.22.0",
+    "cross-env": "7.0.3",
+    "dotenv": "16.3.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "27.6.0",
@@ -66,6 +70,8 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@azure/identity": "4.0.0",
+    "@azure/keyvault-secrets": "4.7.0",
     "@hapi/hapi": "21.3.2",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
@@ -73,7 +79,7 @@
     "axios": "1.6.4",
     "govuk-frontend": "5.0.0",
     "hapi-pino": "12.1.0",
-    "joi": "^17.12.0",
+    "joi": "17.12.1",
     "nunjucks": "3.2.4",
     "shelljs": "0.8.5"
   },
