--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ dist
 *.sqlite
 /.vs
 /reports/test-report.xml
+
+# winston log files
+src/infrastructure/log_files/*_log.*
+src/infrastructure/log_files/*.json
