Feature/298132 integerate azure appinsights (#19)
* Added winston logger

* Updated layouts

* Added docker file

* Added docker file

* Added docker file

* Added docker file

* Added docker file

* Added docker file

* added fix

* added fix

* 298132 - Change in the docker as two stage build and copy necessary fodlers to image to reduce the size

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* fixed test failurel

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* 298132 - Fixing the test coverage issue

* updated pipeline

* updated pipeline

* updated pipeline

* updated pipeline

* updated helm chart

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated pipeline yaml

* updated appinsights js scripts

* updated appinsights js scripts

* updated appinsights js scripts

* updated appinsights js scripts

* updated env config interfaces

* updated env config interfaces

* updated env config interfaces

* updated env config interfaces

* updated env config interfaces

* updated env config interfaces

* updated gitignores

* updated gitignores

* updated appinsights js scripts

* updated helm charts

* Updated environment values

* Updated environment values

* Updated environment values

* router path fixes

* updated helm charts

* 298132 - log_files folder has been moved to root level, updated readme.md file, change in the docker file and build generation

---------

Co-authored-by: Fujale Ahmed Shaik <shaikfujale.ahmed@cognizant.com>

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,6 @@ dist
 /reports/test-report.xml
 
 # winston log files
-src/infrastructure/log_files/*_log.*
-src/infrastructure/log_files/*.json
+log_files/*_log.*
+log_files/*.json
+__tests__/infrastructure/log_files/
