--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "win32"
   ],
   "devDependencies": {
-    "@babel/preset-env": "7.23.9",
     "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.12",
@@ -46,7 +45,6 @@
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "axios-mock-adapter": "1.22.0",
-    "babel-loader": "9.1.3",
     "concurrently": "8.2.2",
     "cross-env": "7.0.3",
     "dotenv": "16.4.1",
@@ -75,6 +73,7 @@
     "@hapi/hapi": "21.3.3",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
+    "applicationinsights": "2.9.2",
     "axios": "1.6.7",
     "govuk-frontend": "5.1.0",
     "hapi-pino": "12.1.0",
@@ -82,7 +81,10 @@
     "nunjucks": "3.2.4",
     "nunjucks-date-filter": "0.1.1",
     "shelljs": "0.8.5",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "winston": "3.11.0",
+    "winston-azure-application-insights": "4.0.0",
+    "winston-daily-rotate-file": "5.0.0"
   },
   "jestSonar": {
     "reportPath": "reports",
