--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint --config tools/.eslintrc.js ./src/**/* --ext .js,.ts",
     "lint:javascript:fix": "eslint --config tools/.eslintrc.js ./src/**/* --fix --ext .js,.ts",
-    "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/application.css",
+    "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
     "format:all": "prettier --config tools/.prettierrc.json --ignore-path .gitignore --write \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "format:check": "prettier --config tools/.prettierrc.json --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "test": "jest --config tools/jest/jest.config.js --coverage -u",
