--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -1,7 +1,3 @@
-# Starter pipeline
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
@@ -9,84 +5,92 @@ trigger:
   branches:
     include:
       - main
-      - features/*
       - feature/*
+      - features/*
 
-variables:
-
-  ACR.Name: nceapocsbox
-  ACR.ResourceGroupName: NCEA-NW-POC
-  ACR.ServiceConnection : acr-AZR-NCE-SND1
-  ACR.ContainerRepository: defra/ncea-fe
+variables: 
+  - template: templates/variables-global.yml
+  - name : acrContainerRegistryServiceConnection
+    value: acr-AZR-NCE-SND1
+  - name : deployToDev
+    value: false
 
 stages:
 - stage: 'Build'
-  displayName: 'Build FE'
+  displayName: 'Build Search WebApp'
   jobs: 
   - job: 'Build'
     displayName: 'Build job'
     pool:
       vmImage: 'ubuntu-latest'
-      demands:
-      - npm
-
     variables:
-      isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
-      isPullRequest: $[eq(variables['Build.Reason'], 'PullRequest')]
-      branchSource: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
-      branch: $[replace(variables['branchSource'], '/', '-')]
-      ${{ if ne(variables.isMain, 'true') }}:
-        artifactNameSuffix: _$(branch)
-      ${{ else }}:
-        artifactNameSuffix: ''
-      chartPath: 'ncea-fe'
-      
+      - template: templates/variables-build.yml      
     steps:
       - template: steps-build-and-test.yaml
       - template: steps-build-and-push-docker-images.yaml
       - template: steps-package-and-push-helm-charts.yaml
 
-# - stage: 'sandbox'
-#   displayName: 'Deploy to the sandbox environment'
-#   dependsOn: Build
-#   condition:  succeeded()
-#   jobs:
-#   - deployment: Deploy
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     environment: sandbox 
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#             - template: steps-deploy-helm-charts.yaml
+- stage: 'sandbox'
+  displayName: 'Deploy to Sandbox'
+  dependsOn: Build
+  condition:  and(succeeded(), eq(variables.isPullRequest, true))  
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables:
+      - template: templates/variables-sandbox.yml
+      - name : aksServiceConnection
+        value: aksServiceConn-AZR-NCE-SND1
+    environment: sandbox 
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - template: steps-deploy-helm-charts.yaml
+              parameters:
+                envName: sandbox
+                releaseName: ncea-fe-sandbox
+                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
 
-# - stage: 'dev'
-#   displayName: 'Deploy to the dev environment'
-#   dependsOn: Build
-#   condition:  succeeded()
-#   jobs:
-#   - deployment: Deploy
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     environment: dev 
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#             - template: steps-deploy-helm-charts.yaml
+- stage: 'dev'
+  displayName: 'Deploy to Dev'
+  dependsOn: Build
+  condition: and(succeeded(), and(eq(variables.isMain, true), eq(variables.deployToDev, true)))
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables:
+      - template: templates/variables-dev.yml
+    environment: dev 
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - template: steps-deploy-helm-charts.yaml
+              parameters:
+                envName: dev
+                releaseName: ncea-fe-dev
+                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
 
-# - stage: 'test'
-#   displayName: 'Deploy to the test environment'
-#   dependsOn: dev
-#   condition:  succeeded()
-#   jobs:
-#   - deployment: Deploy
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     environment: test 
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#             - template: steps-deploy-helm-charts.yaml
+- stage: 'test'
+  displayName: 'Deploy to test'
+  dependsOn: dev
+  condition:  succeeded()
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables:
+      - template: templates/variables-test.yml
+    environment: test 
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - template: steps-deploy-helm-charts.yaml
+              parameters:
+                envName: test
+                releaseName: ncea-fe-test
+                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
