--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: 
+  repository: $(containerRepositoryFullPath)
   pullPolicy: IfNotPresent
-  tag: 
+  tag: $(imageTag)
 
 imagePullSecrets: []
 nameOverride: ""
@@ -29,21 +29,23 @@ service:
 
 ingress:
   enabled: true
-  className: "webapprouting.kubernetes.azure.com"
-  annotations: {}
+  className: nginx
+  annotations: 
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "true"
   hosts:
     - host: 
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
 
 resources: {}
 
 autoscaling:
-  enabled: false
+  enabled: $(autoScalingEnabled)
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: $(autoScalingMaxReplicas)
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
@@ -58,13 +60,7 @@ tolerations: []
 affinity: {}
 
 env:
-  - name: PORT
-    value: 
-  - name: NODE_ENV
-    value: dev
-  - name: APPINSIGHTS_SECRET_NAME
-    value: ApplicationInsights--ConnectionString
-  - name: AZURE_KEYVAULT_URL
-    value: 
-  - name: ELASTICSEARCH_API
-    value: 
+  PORT: $(port)
+  NODE_ENV: $(nodeEnd)
+  AZURE_KEYVAULT_URL: $(keyVaultUri)
+  ELASTICSEARCH_API: $(elasticSearchApi)
