--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -1,5 +1,11 @@
-
 name: $(Date:yyyyMMdd)$(Rev:.r)
+
+resources:
+  repositories:
+    - repository: ncea-test-automation
+      type: github
+      endpoint: github
+      name: DEFRA/ncea-test-automation
 
 trigger:
   branches:
@@ -8,89 +14,113 @@ trigger:
       - feature/*
       - features/*
 
-variables: 
+variables:
   - template: templates/variables-global.yml
-  - name : acrContainerRegistryServiceConnection
-    value: acr-AZR-NCE-SND1
-  - name : deployToDev
+  - name: acrContainerRegistryServiceConnection
+    value: acr-AZR-NCE-DEV-TEMP
+  - name: deployToDev
+    value: true
+  - name: deployToTest
     value: false
 
 stages:
-- stage: 'Build'
-  displayName: 'Build Search WebApp'
-  jobs: 
-  - job: 'Build'
-    displayName: 'Build job'
-    pool:
-      vmImage: 'ubuntu-latest'
-    variables:
-      - template: templates/variables-build.yml      
-    steps:
-      - template: steps-build-and-test.yaml
-      - template: steps-build-and-push-docker-images.yaml
-      - template: steps-package-and-push-helm-charts.yaml
+  - stage: 'Build'
+    displayName: 'Build Search WebApp'
+    jobs:
+      - job: 'Build'
+        displayName: 'Build job'
+        pool:
+          name: DEFRA-COMMON-ubuntu2204-SSV3
+        variables:
+          - template: templates/variables-build.yml
+        steps:
+          - template: steps-build-and-test.yaml
+          - template: steps-build-and-push-docker-images.yaml
+          - template: steps-package-and-push-helm-charts.yaml
 
-# - stage: 'sandbox'
-#   displayName: 'Deploy to Sandbox'
-#   dependsOn: Build
-#   condition:  and(succeeded(), eq(variables.isPullRequest, true))  
-#   jobs:
-#   - deployment: Deploy
-#     pool:
-#       vmImage: 'ubuntu-latest'
-#     variables:
-#       - template: templates/variables-sandbox.yml
-#       - name : aksServiceConnection
-#         value: aksServiceConn-AZR-NCE-SND1
-#     environment: sandbox 
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#             - template: steps-deploy-helm-charts.yaml
-#               parameters:
-#                 envName: sandbox
-#                 releaseName: ncea-fe-sandbox
-#                 aksServiceConnection: aksServiceConn-AZR-NCE-SND1
+      - job: 'BuildTestTools'
+        displayName: 'Build test tools'
+        condition: and(succeeded(), eq(variables.isPullRequest, true))
+        pool:
+          vmImage: 'windows-latest'
+        variables:
+          - template: templates/variables-build.yml
+        steps:
+          - template: steps-build-test-automation-tools.yaml
 
-- stage: 'dev'
-  displayName: 'Deploy to Dev'
-  dependsOn: Build
-  condition: and(succeeded(), and(eq(variables.isMain, true), eq(variables.deployToDev, true)))
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-latest'
-    variables:
-      - template: templates/variables-dev.yml
-    environment: dev 
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - template: steps-deploy-helm-charts.yaml
-              parameters:
-                envName: dev
-                releaseName: ncea-fe-dev
-                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
+  # - stage: 'sandbox'
+  #   displayName: 'Deploy to Sandbox'
+  #   dependsOn: Build
+  #   condition:  and(succeeded(), eq(variables.isPullRequest, true))
+  #   jobs:
+  #   - deployment: Deploy
+  #     pool:
+  #       vmImage: 'ubuntu-latest'
+  #     variables:
+  #       - template: templates/variables-sandbox.yml
+  #       - name : aksServiceConnection
+  #         value: aksServiceConn-AZR-NCE-SND1
+  #     environment: sandbox
+  #     strategy:
+  #       runOnce:
+  #         deploy:
+  #           steps:
+  #             - template: steps-deploy-helm-charts.yaml
+  #               parameters:
+  #                 envName: sandbox
+  #                 releaseName: ncea-fe-sandbox
+  #                 aksServiceConnection: aksServiceConn-AZR-NCE-SND1
 
-- stage: 'test'
-  displayName: 'Deploy to test'
-  dependsOn: dev
-  condition:  succeeded()
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-latest'
-    variables:
-      - template: templates/variables-test.yml
-    environment: test 
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - template: steps-deploy-helm-charts.yaml
-              parameters:
-                envName: test
-                releaseName: ncea-fe-test
-                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
+  # - job: RunTests
+  #   dependsOn: Deploy
+  #   pool:
+  #     vmImage: 'windows-latest'
+  #   steps:
+  #     - template: steps-run-automated-tests.yaml
+
+  - stage: 'dev'
+    displayName: 'Deploy to Dev'
+    dependsOn: Build
+    condition: and(succeeded(), and(eq(variables.isPullRequest, true), eq(variables.deployToDev, true)))
+    jobs:
+      - deployment: Deploy
+        pool:
+          name: DEFRA-COMMON-ubuntu2204-SSV3
+        variables:
+          - template: templates/variables-dev.yml
+        environment: dev
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - template: steps-deploy-helm-charts.yaml
+                  parameters:
+                    releaseName: ncea-fe-dev
+                    armServiceConnection: AZR-NCE-DEV1
+
+      - job: RunTests
+        dependsOn: Deploy
+        pool:
+          vmImage: 'windows-latest'
+        steps:
+          - template: steps-run-automated-tests.yaml
+
+  - stage: 'test'
+    displayName: 'Deploy to test'
+    dependsOn: dev
+    condition: and(succeeded(), eq(variables.deployToTest, true))
+    jobs:
+      - deployment: Deploy
+        pool:
+          name: DEFRA-COMMON-ubuntu2204-SSV3
+        variables:
+          - template: templates/variables-test.yml
+        environment: test
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - template: steps-deploy-helm-charts.yaml
+                  parameters:
+                    releaseName: ncea-fe-test
+                    armServiceConnection: AZR-NCE-DEV1
