--- a/pipeline/steps-build-and-test.yaml
+++ b/pipeline/steps-build-and-test.yaml
@@ -1,5 +1,7 @@
 steps:
 
+- checkout: self
+
 - task: UseNode@1
   inputs:
     version: '18.x'
@@ -31,8 +33,6 @@ steps:
   displayName: 'Publish code coverage result'
 
 - task: SonarCloudAnalyze@1
-  inputs:
-    jdkversion: 'JAVA_HOME_17_X64'
   displayName: 'Run Code Analysis'
 
 - task: SonarCloudPublish@1
