--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -1,9 +1,7 @@
 parameters:
-  - name: envName
-    type: string
   - name: releaseName
     type: string
-  - name: aksServiceConnection
+  - name: armServiceConnection
     type: string
 
 steps:
@@ -22,28 +20,34 @@ steps:
     overwriteExistingFiles: true
     destinationFolder: '$(Pipeline.Workspace)/chart' 
 
+- task: KubeloginInstaller@0
+  inputs:
+    kubeloginVersion: 'latest'
+
 - task: HelmDeploy@0
   displayName: 'Helm Deploy'
   condition: succeeded()
   inputs:
-    connectionType: 'Kubernetes Service Connection'
-    kubernetesServiceConnection: ${{ parameters.aksServiceConnection }}
+    connectionType: Azure Resource Manager
+    azureSubscriptionEndpoint: ${{ parameters.armServiceConnection }}
+    azureResourceGroup: $(aksResourceGroupName)
+    kubernetesCluster : $(aksClusterName)
     namespace: $(aksNamespace)
     command: 'upgrade'
     chartType: 'FilePath'
     chartPath: '$(Pipeline.Workspace)/ncea-fe-$(Build.BuildNumber).tgz'
-    valueFile: $(Pipeline.Workspace)/chart/ncea-fe/values/values.${{ parameters.envName }}.yaml
+    valueFile: $(Pipeline.Workspace)/chart/ncea-fe/values/values.yaml
     overrideValues: |
         image.repository=$(containerRepositoryFullPath)
         image.tag=$(imageTag)
         serviceAccount.name=$(serviceAccountSearchWebApp)
         ingress.hosts[0].host=$(hostName)
+        autoscaling.enabled=$(autoScalingEnabled)
+        autoscaling.maxReplicas=$(autoScalingMaxReplicas)
         env.PORT=$(port)
         env.NODE_ENV=$(nodeEnv)
-        env.APPINSIGHTS_SECRET_NAME=$(appinsightsSecretName)
         env.AZURE_KEYVAULT_URL=$(keyVaultUri)
         env.ELASTICSEARCH_API=$(elasticSearchApi)
-        
     install: true
     force: true
     releaseName: ${{ parameters.releaseName }}
