Feature/pipeline updated pipelines to include test environment (#37)
* updated pipeline for tst environment

* modified pipeline for tst environment

---------

Co-authored-by: OP <2026593@cognizant.com>

--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -16,12 +16,12 @@ trigger:
 
 variables:
   - template: templates/variables-global.yml
-  - name: acrContainerRegistryServiceConnection
-    value: acr-AZR-NCE-DEV-TEMP
+  - name: azureServiceConnectionForAcr
+    value: AZR-NCE-DEV1  
   - name: deployToDev
     value: true
   - name: deployToTest
-    value: false
+    value: true
 
 stages:
   - stage: 'Build'
@@ -81,7 +81,7 @@ stages:
   - stage: 'dev'
     displayName: 'Deploy to Dev'
     dependsOn: Build
-    condition: and(succeeded(), and(eq(variables.isPullRequest, true), eq(variables.deployToDev, true)))
+    condition: and(succeeded(), and(eq(variables.isMain, true), eq(variables.deployToDev, true)))
     jobs:
       - deployment: Deploy
         pool:
@@ -123,4 +123,4 @@ stages:
                 - template: steps-deploy-helm-charts.yaml
                   parameters:
                     releaseName: ncea-fe-test
-                    armServiceConnection: AZR-NCE-DEV1
+                    armServiceConnection: AZR-NCE-TST
