--- a/pipeline/templates/variables-test.yml
+++ b/pipeline/templates/variables-test.yml
@@ -1,3 +1,3 @@
 variables:
-- group: azureVariables-dev
-- group: searchWebAppVariables-dev
+- group: azureVariables-test
+- group: searchWebAppVariables-test
