--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -62,3 +62,15 @@ steps:
     install: true
     force: true
     releaseName: ${{ parameters.releaseName }}
+
+- task: HelmDeploy@0
+  displayName: 'Helm Rollback'
+  condition: failed()
+  inputs:
+    connectionType: Azure Resource Manager
+    azureSubscriptionEndpoint: ${{ parameters.armServiceConnection }}
+    azureResourceGroup: $(aksResourceGroupName)
+    kubernetesCluster : $(aksClusterName)
+    namespace: $(aksNamespace) 
+    command: 'rollback'
+    arguments: ${{ parameters.releaseName }} --timeout=30m --debug
