Features/389562 update the service name on FE objects (#76)
* feat: GTM tracking

* Update the service name on FE objects

* Commenting ncea-test-automation to resolve the pipeline issues

* Commenting to resolve the pipeline issue

--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -1,11 +1,11 @@
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
-resources:
-  repositories:
-    - repository: ncea-test-automation
-      type: github
-      endpoint: github
-      name: DEFRA/ncea-test-automation
+# resources:
+#   repositories:
+    # - repository: ncea-test-automation
+    #   type: github
+    #   endpoint: github
+    #   name: DEFRA/ncea-test-automation
 
 trigger:
   branches:
