385562 - Connecting to an Elasticsearch cluster requires authentication (#70)
* GTM ID dummy id hardcoded in the template

* 385513 - Onboarding the elasticsearch client and performing the queries instead of REST API

* 385562 - Introducing the authenication while accessing the elasticsearch cluster

* Refactor deployment to add elasticsearch env variables

* Add overrides for helm deployment.

* Remove volume mounts from values yaml and update cert path

* Update Dockerfile for certs

* Update the location for certs

---------

Co-authored-by: Karthigayayini Ramachandran <karthigayayini.r@cognizant.com>
Co-authored-by: Uday Kiran Yagnamurthy <uday.kiran2@cognizant.com>

--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -71,3 +71,5 @@ env:
   NODE_ENV: $(nodeEnd)
   AZURE_KEYVAULT_URL: $(keyVaultUri)
   ELASTICSEARCH_API: $(elasticSearchApi)
+  ES_USERNAME: $(elasticSearchUser)
+  ES_PASSWORD: $(elasticSearchPassword)
