--- a/ncea-fe/templates/deployment.yaml
+++ b/ncea-fe/templates/deployment.yaml
@@ -66,7 +66,10 @@ spec:
             value: "{{ .Values.env.AZURE_KEYVAULT_URL }}"
           - name: ELASTICSEARCH_API
             value: "{{ .Values.env.ELASTICSEARCH_API }}"
-
+          - name: ES_USERNAME
+            value: "{{ .Values.env.ES_USERNAME }}"
+          - name: ES_PASSWORD
+            value: "{{ .Values.env.ES_PASSWORD }}"
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
