--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -59,6 +59,8 @@ steps:
         env.NODE_ENV=$(nodeEnv)
         env.AZURE_KEYVAULT_URL=$(keyVaultUri)
         env.ELASTICSEARCH_API=$(elasticSearchApi)
+        env.ES_USERNAME=$(elasticSearchUser)
+        env.ES_PASSWORD=$(elasticSearchPassword)
     install: true
     force: true
     releaseName: ${{ parameters.releaseName }}
