Features/397086 more info tab unavailable displayed unavailable (#90)
* GTM ID dummy id hardcoded in the template

* 385513 - Onboarding the elasticsearch client and performing the queries instead of REST API

* 385562 - Introducing the authenication while accessing the elasticsearch cluster

* Refactor deployment to add elasticsearch env variables

* Add overrides for helm deployment.

* 397086 More info tab must be displayed as 'Unavailable'

* Remove Natural capital and Governance tab

---------

Co-authored-by: Fujale Ahmed Shaik <shaikfujale.ahmed@cognizant.com>
Co-authored-by: Uday Kiran Yagnamurthy <uday.kiran2@cognizant.com>

--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -56,9 +56,14 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes: []
+volumes:
+- name: elasticsearch-certs
+  secret:
+    secretName: elasticsearch-master-certs
 
-volumeMounts: []
+volumeMounts:
+- mountPath: /usr/share/elasticsearch/config/certs
+  name: elasticsearch-certs
 
 nodeSelector: {}
 
