--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -11,7 +11,11 @@ trigger:
 variables:
   - template: templates/variables-global.yml
   - name: azureServiceConnectionForAcr
-    value: AZR-NCE-DEV1
+    value: AZR-NCE-DEV1  
+  - name : azureServiceConnectionForTest
+    value: AZR-NCE-TST  
+  - name : azureServiceConnectionForPreAcr
+    value: AZR-NCE-PRE
   - name: deployToDev
     value: true
   - name: deployToTest
@@ -31,30 +35,6 @@ stages:
           - template: steps-build-and-test.yaml
           - template: steps-build-and-push-docker-images.yaml
           - template: steps-package-and-push-helm-charts.yaml
-
-  # - stage: 'sandbox'
-  #   displayName: 'Deploy to Sandbox'
-  #   dependsOn: Build
-  #   condition:  and(succeeded(), eq(variables.isPullRequest, true))
-  #   jobs:
-  #   - deployment: Deploy
-  #     pool:
-  #       vmImage: 'ubuntu-latest'
-  #     variables:
-  #       - template: templates/variables-sandbox.yml
-  #       - name : aksServiceConnection
-  #         value: aksServiceConn-AZR-NCE-SND1
-  #     environment: sandbox
-  #     strategy:
-  #       runOnce:
-  #         deploy:
-  #           steps:
-  #             - template: steps-deploy-helm-charts.yaml
-  #               parameters:
-  #                 envName: sandbox
-  #                 releaseName: ncea-fe-sandbox
-  #                 aksServiceConnection: aksServiceConn-AZR-NCE-SND1
-
 
   - stage: 'dev'
     displayName: 'Deploy to Dev'
@@ -95,3 +75,24 @@ stages:
                   parameters:
                     releaseName: ncea-fe-test
                     armServiceConnection: AZR-NCE-TST
+
+  - stage: 'pre'
+    displayName: 'Deploy to Pre Prod'
+    dependsOn: test
+    condition: and(succeeded(), eq(variables.deployToPre, true))
+    jobs:
+      - deployment: Deploy
+        pool:
+          name: DEFRA-COMMON-ubuntu2204-SSV5
+        variables:
+          - template: templates/variables-pre.yml
+        environment: pre
+        strategy:
+          runOnce:
+            deploy:
+              steps:                            
+                - template: steps-import-docker-images.yaml
+                - template: steps-deploy-helm-charts.yaml
+                  parameters:
+                    releaseName: ncea-fe-pre
+                    armServiceConnection: AZR-NCE-PRE1
