Feature/406881 mdc schema hosting (#106)
* MDC hosting

* MDC hosting

* Fixed environment variable issues.

* Fixed Test case

* Fixed unit tests

* Fixed Sonar issues

* removed console log

* Unit tests for MDC controller

--- a/ncea-fe/templates/deployment.yaml
+++ b/ncea-fe/templates/deployment.yaml
@@ -74,6 +74,8 @@ spec:
             value: "{{ .Values.env.CLASSIFIER_API }}"
           - name: CLASSIFIER_API_KEY
             value: "nceaClassifierMicroServiceApiKey"
+          - name: WEBDOMAIN
+            value: "{{ .Values.env.WEBDOMAIN }}"
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
