--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -80,3 +80,4 @@ env:
   ES_PASSWORD: $(elasticSearchPassword)
   CLASSIFIER_API: $(classifierApiBaseUri)
   WEBDOMAIN: $(webdomain)
+  GTM_ID: $(gtmId)
