fix(project): Integrate VSCode with linting/formatting
I've moved config files to the root as that is the default place most
tools expect their configs, it save extra customization in usage, so
makes command simpler. Adding the `.vscode` directory with settings
for VSCode means that the linting/formatting tools are integrated with
the IDE and are applied when a file is saved, as opposed to at commit
time.

I've also made the absolute imports, which was setup, but never really
used, so we can get rid of lots of confusing import statments like

`../../../blah`

Figuring out that directory gets harder the deeper the import hierarchy
gets. Using absolute paths means files can move around without every
having to change, unlike the relative imports used here.

IssueID NCEA-22

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "copy-files": "ts-node copyNonTSFiles.ts",
     "json-server": "json-server ./src/services/mock-data.json --port 3300",
     "lint": "npm run lint:javascript",
-    "lint:javascript": "eslint --config tools/.eslintrc.js ./src/**/* --ext .js,.ts",
-    "lint:javascript:fix": "eslint --config tools/.eslintrc.js ./src/**/* --fix --ext .js,.ts",
+    "lint:javascript": "eslint ./src/**/* --ext .js,.ts",
+    "lint:javascript:fix": "eslint ./src/**/* --fix --ext .js,.ts",
     "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
-    "format:all": "prettier --config tools/.prettierrc.json --ignore-path .gitignore --write \"./src/**/*.+(js|ts|jsx|tsx)\"",
-    "format:check": "prettier --config tools/.prettierrc.json --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
-    "test": "jest --config tools/jest/jest.config.js --coverage -u",
-    "test:dev": "jest --watchAll --config tools/jest/jest.config.js -u",
+    "format:all": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|jsx|tsx)\"",
+    "format:check": "prettier --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
+    "test": "jest --coverage -u",
+    "test:dev": "jest --watchAll -u",
     "prepare": "husky"
   },
   "keywords": [],
