--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,18 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "target": "es2022",
-    "lib": ["es2022"],
-
+    "lib": [
+      "es2022"
+    ],
     "esModuleInterop": true,
-    "module": "CommonJS",
+    "module": "ES2022",
     "moduleResolution": "Node",
-
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitAny": false,
-
     "outDir": "build",
     "rootDir": "./src",
     "baseUrl": ".",
@@ -28,9 +27,16 @@
       "joi"
     ],
     "paths": {
-      "@/*": ["*"]
+      "@/*": [
+        "*"
+      ]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "build"
+  ]
 }
