--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint ./src/**/* --ext .js,.ts",
     "lint:javascript:fix": "eslint ./src/**/* --fix --ext .js,.ts",
+    "lint:rules": "eslint --print-config rules > eslint-rules.json",
     "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
     "format:all": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "format:check": "prettier --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
@@ -36,6 +37,7 @@
     "win32"
   ],
   "devDependencies": {
+    "@tpzdsp/eslint-config-dsp": "^1.0.1",
     "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "29.5.12",
@@ -50,6 +52,8 @@
     "dotenv": "16.4.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "27.6.3",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "9.0.10",
