--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitAny": false,
     "outDir": "build",
-    "rootDir": "./src",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "types": [
       "node",
       "jest",
