--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@tpzdsp/eslint-config-dsp": "^1.0.1",
     "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
-    "@types/jest": "29.5.12",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.11.16",
     "@types/nunjucks": "3.2.6",
     "@types/shelljs": "0.8.15",
@@ -67,7 +67,7 @@
     "rimraf": "5.0.5",
     "sass": "1.70.0",
     "supertest": "6.3.4",
-    "ts-jest": "29.1.2",
+    "ts-jest": "^29.2.5",
     "tsx": "4.7.0",
     "typescript": "5.3.3"
   },
