--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "build": "rimraf ./build && tsc && npm run copy-files",
     "copy-files": "ts-node copyNonTSFiles.ts",
     "json-server": "json-server ./src/services/mock-data.json --port 3300",
-    "lint": "npm run lint:javascript",
-    "lint:javascript": "eslint ./src/**/* --ext .js,.ts",
-    "lint:javascript:fix": "eslint ./src/**/* --fix --ext .js,.ts",
+    "lint": "eslint ./src/**/*.{js,ts}",
+    "lint:fix": "npm run lint --fix",
     "lint:rules": "eslint --print-config rules > eslint-rules.json",
     "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
     "format:all": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "format:check": "prettier --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
-    "test": "jest --coverage -u",
-    "test:dev": "jest --watchAll -u",
+    "test": "jest --watchAll -u",
+    "test:ci": "jest --coverage -u",
     "prepare": "husky"
   },
   "keywords": [],
