--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:dev": "concurrently \"npm run sass:compile\" \"cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json\"",
     "start": "npm run build && node ./build/index.js",
     "build": "rimraf ./build && tsc && npm run copy-files",
-    "copy-files": "ts-node copyNonTSFiles.ts",
+    "copy-files": "cp -r ./src/views ./build",
     "json-server": "json-server ./src/services/mock-data.json --port 3300",
     "lint": "eslint ./src/**/*.{js,ts}",
     "lint:fix": "npm run lint --fix",
