feat(devops): Add automated release management
I've added semantic-release and a few related packages to manage
the automation of release management. Semantic release takes care
of:

 * building/appending to a changelog file
 * Incrementing the version in package.json
 * tagging of branch with version number
 * Committing all those changes
 * Creating GitHub release

To manage the Changelog and version increment, we need to adopt the
`Angular` Commit message format, found at:

https://github.com/angular/angular/blob/main/CONTRIBUTING.md#-commit-message-format

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format:check": "prettier --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "test": "jest --watchAll -u",
     "test:ci": "jest --coverage -u",
+    "release": "semantic-release",
     "prepare": "husky"
   },
   "keywords": [],
@@ -76,6 +77,9 @@
     "@hapi/hapi": "21.3.3",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.5",
     "applicationinsights": "2.9.2",
     "axios": "1.6.7",
     "govuk-frontend": "5.1.0",
@@ -83,6 +87,7 @@
     "joi": "17.12.1",
     "nunjucks": "3.2.4",
     "nunjucks-date-filter": "0.1.1",
+    "semantic-release": "^22.0.12",
     "ts-node": "10.9.2",
     "winston": "3.11.0",
     "winston-azure-application-insights": "4.0.0",
