--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "es2022"
     ],
     "esModuleInterop": true,
-    "module": "ES2022",
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
