--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
   ],
   "devDependencies": {
     "@tpzdsp/eslint-config-dsp": "^1.0.1",
+    "@types/hapi__cookie": "^12.0.5",
+    "@types/hapi__hapi": "^21.0.0",
     "@types/hapi__joi": "17.1.14",
     "@types/hapi__vision": "5.5.7",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.11.16",
     "@types/nunjucks": "3.2.6",
     "@types/shelljs": "0.8.15",
@@ -74,6 +77,7 @@
     "@azure/identity": "4.0.1",
     "@azure/keyvault-secrets": "4.7.0",
     "@elastic/elasticsearch": "8.13.1",
+    "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "21.3.3",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
@@ -84,6 +88,7 @@
     "govuk-frontend": "5.7.1",
     "hapi-pino": "12.1.0",
     "joi": "17.12.1",
+    "jsonwebtoken": "^9.0.2",
     "nunjucks": "3.2.4",
     "nunjucks-date-filter": "0.1.1",
     "semantic-release": "^22.0.12",
