fix(search): Update mapping between API response and UI data shape
Again, since we are moving from data provided by ElasticSearch to
data provided by an AGM API, the response from the API differs greatly.
I have written a new `transformSearchResponse` function that takes
the API response and generates the data shape the app was already
using. This is greately simplified over what was retrieved from
ElasticSearch.

NOTE: I have left the old `formatSearchResponse` function as it is
still used by the `getDocumentDetails`. That will be updated in
future commits though.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.5",
+    "@turf/turf": "^7.2.0",
     "applicationinsights": "2.9.2",
     "date-fns": "^4.1.0",
     "govuk-frontend": "5.7.1",
