feat(search): Cache API results
I have added code to Cache API responses per user, to reduce calls
to the API. The key of the cache is based on the querystring and
filters set, so if any of those change, a new request is made. I
omit the pagination `pg` and `resultsPerPage` values as they change
due to pagination, not due to results changing.

--- a/package.json
+++ b/package.json
@@ -80,11 +80,13 @@
     "@hapi/hapi": "21.3.3",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
+    "@hapi/yar": "^11.0.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.5",
     "@turf/turf": "^7.2.0",
     "applicationinsights": "2.9.2",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "govuk-frontend": "5.7.1",
     "hapi-pino": "12.1.0",
