fix(moreinfo): Fix the new line issue in general tab content
New line is not getting in the general tab content, fixed the format issue.

IssueID # NCEA: 382

--- a/package.json
+++ b/package.json
@@ -90,9 +90,11 @@
     "hapi-pino": "12.1.0",
     "joi": "17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "marked": "^9.1.6",
     "nunjucks": "3.2.4",
     "nunjucks-date-filter": "0.1.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "rss-parser": "^3.13.0",
     "semantic-release": "^22.0.12",
     "ts-node": "10.9.2",
